batch-mode/language-model-batch-workflow-derive/tests/trybuild/fail_missing_error_type.stderr
error: Missing required `#[batch_error_type(...)]` attribute on the struct. Provide a custom error type.
  --> tests/trybuild/fail_missing_error_type.rs:10:8
   |
10 | struct MissingErrorType {
   |        ^^^^^^^^^^^^^^^^

warning: unused import: `batch_mode_batch_workflow::*`
 --> tests/trybuild/fail_missing_error_type.rs:6:5
  |
6 | use batch_mode_batch_workflow::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
